--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,6 +18,7 @@ $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
 $purple-color: #b509ac !default;
 $auburn-blue-color: #0c2340 !default;
+$auburn-orange-color: #e87722 !default;
 $light-purple-color: lighten($purple-color, 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
