--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -21,6 +21,7 @@
   --global-back-to-top-text-color: #{$white-color};
   --global-newsletter-bg-color: #{$white-color};
   --global-newsletter-text-color: #{$black-color};
+  --global-citation-color: #{$auburn-blue-color};
 
   --global-tip-block: #42b983;
   --global-tip-block-bg: #e2f5ec;
