--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -177,7 +177,7 @@ ul.task-list input[type="checkbox"] {
 
 .citation,
 .citation-number {
-  color: var(--global-theme-color);
+  color: var(--global-citation-color);
 }
 
 // Profile
