--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1294,3 +1294,30 @@ ninja-keys::part(ninja-input-wrapper) {
   background-color: var(--global-theme-color);
   color: var(--global-text-color);
 }
+
+// Customized News/Announcement Session
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+}
+
+.announcements-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.announcements-table th,
+.announcements-table td {
+    border: 1px solid transparent;
+    padding: 10px;
+    text-align: left;
+}
+
+.announcements-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.announcements-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
