--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,12 +48,12 @@ table.table a {
   }
 }
 
-// .table-dark {
-//   background-color: transparent;
-//   &.table-bordered {
-//     border: 1px solid var(--global-divider-color) !important;
-//   }
-// }
+.table-dark {
+  background-color: transparent;
+  &.table-bordered {
+    border: 1px solid var(--global-divider-color) !important;
+  }
+}
 
 blockquote {
   background: var(--global-bg-color);
