--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -4,7 +4,11 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">
-      {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}
+      {% if site.title == 'blank' %}
+        {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}
+      {% else %}
+        {{ site.title }}
+      {% endif %}
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
   </header>
